hphp/test/quick/unset_static.php.expectf
HipHop Fatal error: Attempt to unset static property Foo::$baz in %s on line 5
